--- a/src/components/portfolioViews/PortfolioViewWrapper.astro
+++ b/src/components/portfolioViews/PortfolioViewWrapper.astro
@@ -22,8 +22,8 @@ const componentMappings = {
   wideCards: { Container: WideCardContainer, Item: WideCardItem },
 };
 
-const allProjectsRaw = await getCollection("projects");
-const allProjects = allProjectsRaw.sort((a, b) => {
+const allProjectsUnsorted = await getCollection("projects");
+const allProjects = allProjectsUnsorted.sort((a, b) => {
   const idA = a.data.sortID || 0;
   const idB = b.data.sortID || 0;
   return idA - idB;
