--- a/src/components/pagebuilder/SimpleMultiCol.astro
+++ b/src/components/pagebuilder/SimpleMultiCol.astro
@@ -15,6 +15,6 @@
     }
   }
 </style>
-<div class="simple-multicol">
+<div class:list={["simple-multicol", Astro.props.customClass]}>
   <slot />
 </div>
