adds custom class to simple col

--- a/src/components/pagebuilder/SimpleCol.astro
+++ b/src/components/pagebuilder/SimpleCol.astro
@@ -17,6 +17,9 @@ const colWidth = (props.width / 12) * 100 + "%";
     }
   }
 </style>
-<div class="simple-col" style={{ "--colFlexBasis": colWidth }}>
+<div
+  class:list={["simple-col", props.customClass]}
+  style={{ "--colFlexBasis": colWidth }}
+>
   <slot />
 </div>
