adds custom class to multicol container

--- a/src/components/pagebuilder/MultiColumn.astro
+++ b/src/components/pagebuilder/MultiColumn.astro
@@ -1,13 +1,22 @@
 ---
-const {props}=Astro;
-const {justifyContent,gap,alignItems,flexDirection}=props
+const { props } = Astro;
+const { justifyContent, gap, alignItems, flexDirection } = props;
 ---
+
 <style>
-.multicolumn_container{
-  display: flex;
-  flex-wrap: wrap;
-}
+  .multicolumn_container {
+    display: flex;
+    flex-wrap: wrap;
+  }
 </style>
-<div class="multicolumn_container" style={{justifyContent:justifyContent,gap:gap,alignItems:alignItems,flexDirection:flexDirection}}>
+<div
+  class:list={["multicolumn_container", props.customClass]}
+  style={{
+    justifyContent: justifyContent,
+    gap: gap,
+    alignItems: alignItems,
+    flexDirection: flexDirection,
+  }}
+>
   <slot />
 </div>
