makes site title clickable

--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -290,7 +290,9 @@ const cssRules = {
   {
     settings.menu.siteTitle && (
       <div class="top-bar-text-wrapper">
-        <p class="top-bar-text">{settings.menu.siteTitle}</p>
+        <a class="unstyled-link" href="/">
+          <p class="top-bar-text">{settings.menu.siteTitle}</p>
+        </a>
       </div>
     )
   }
