--- a/src/components/sitelayout/Sidebar/SidebarNav.astro
+++ b/src/components/sitelayout/Sidebar/SidebarNav.astro
@@ -247,7 +247,9 @@ const fontSettings = fontRules(settings.menu.typography);
   {
     settings.menu.siteTitle && (
       <div class="top-bar-text-wrapper">
-        <p class="top-bar-text">{settings.menu.siteTitle}</p>
+        <a class="unstyled-link" href="/">
+          <p class="top-bar-text">{settings.menu.siteTitle}</p>
+        </a>
       </div>
     )
   }
