fixes spelling mistake

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -248,7 +248,7 @@ fontSpecSets.forEach((pair) => {
         text-decoration: none;
       }
       .unstyled-link:visited {
-        color: inital;
+        color: initial;
       }
       *:first-child {
         margin-top: 0;
