adds customClass to CustomCSSWrapper

--- a/src/components/pagebuilder/CustomCSSWrapper.astro
+++ b/src/components/pagebuilder/CustomCSSWrapper.astro
@@ -2,6 +2,6 @@
 const { props } = Astro;
 ---
 
-<div style={atob(props.customCSS)}>
+<div class:list={[props.customClass]} style={atob(props.customCSS)}>
   <slot />
 </div>
