--- a/src/components/portfolioViews/card/CardContainer.astro
+++ b/src/components/portfolioViews/card/CardContainer.astro
@@ -40,6 +40,10 @@ const cardRules = formatCssRules({
   }
 </style>
 
-<div id={props.containerId} class="tile-container" style={cardRules}>
+<div
+  id={props.containerId}
+  class:list={["tile-container", props.addClass]}
+  style={cardRules}
+>
   <slot />
 </div>
