--- a/src/components/portfolioViews/coolTile/CoolTileContainer.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileContainer.astro
@@ -34,6 +34,10 @@ const coolTileRules = formatCssRules({
   }
 </style>
 
-<div id={props.containerId} class="tile-container" style={coolTileRules}>
+<div
+  id={props.containerId}
+  class:list={["tile-container", props.addClass]}
+  style={coolTileRules}
+>
   <slot />
 </div>
