--- a/src/components/portfolioViews/card/CardItem.astro
+++ b/src/components/portfolioViews/card/CardItem.astro
@@ -4,7 +4,7 @@ const { title, line2, line3, url, thumbnail, accent } = Astro.props;
 import { settings } from "../../helpers/settingsHelper";
 import { colord } from "colord";
 
-const tileSettings = settings.portfolioLayouts.coolTile;
+const cardSettings = settings.portfolioLayouts.card;
 ---
 
 <style>
@@ -81,7 +81,12 @@ const tileSettings = settings.portfolioLayouts.coolTile;
 <article class="portfolio-card">
   {
     thumbnail ? (
-      <Image src={thumbnail} class={"card-image"} alt="" />
+      <Image
+        src={thumbnail}
+        class={"card-image"}
+        alt=""
+        width={cardSettings.card.minWidth * 2 || 800}
+      />
     ) : (
       <div class="card-image" />
     )
