--- a/src/components/pagebuilder/MarkdocImageReplace.astro
+++ b/src/components/pagebuilder/MarkdocImageReplace.astro
@@ -3,10 +3,11 @@ const { props } = Astro;
 const imagePath = props.src;
 import Image from "astro/components/Image.astro";
 import { settings } from "../helpers/settingsHelper";
-
+console.log(props);
 const images = import.meta.glob<{ default: ImageMetadata }>(
   "./../../assets/images/**/*.{jpeg,jpg,png,gif}"
 );
+
 if (!images[imagePath])
   throw new Error(
     `"${props.image}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`
