--- a/src/components/pagebuilder/ImagePopout.astro
+++ b/src/components/pagebuilder/ImagePopout.astro
@@ -12,7 +12,7 @@ let imageSrc = "";
 let imageSrcSet = "";
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  "./../../**/*.{jpeg,jpg,png,gif}"
+  "./../../**/*.{jpeg,jpg,png,gif,PNG,JPG,GIF,JPEG,webp,WEBP}"
 );
 // console.log(images);
 
