--- a/src/components/pagebuilder/MarkdocImageReplace.astro
+++ b/src/components/pagebuilder/MarkdocImageReplace.astro
@@ -5,12 +5,12 @@ import Image from "astro/components/Image.astro";
 import { settings } from "../helpers/settingsHelper";
 console.log(props);
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  "./../../assets/images/**/*.{jpeg,jpg,png,gif}"
+  "./../../assets/images/**/*.{jpeg,jpg,png,gif,PNG,JPG,GIF,JPEG,webp,WEBP}"
 );
 
 if (!images[imagePath])
   throw new Error(
-    `"${props.image}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`
+    `"${props.image}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,PNG,JPG,GIF,JPEG,webp,WEBP}"`
   );
 ---
 
