--- a/src/components/pagebuilder/OptimizedImage.astro
+++ b/src/components/pagebuilder/OptimizedImage.astro
@@ -5,11 +5,11 @@ import Image from "astro/components/Image.astro";
 import { settings } from "../helpers/settingsHelper";
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  "./../../assets/images/**/*.{jpeg,jpg,png,gif}"
+  "./../../assets/images/**/*.{jpeg,jpg,png,gif,PNG,JPG,GIF,JPEG,webp,WEBP}"
 );
 if (!images[imagePath])
   throw new Error(
-    `"${props.image}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`
+    `"${props.image}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,PNG,JPG,GIF,JPEG,webp,WEBP}"`
   );
 ---
 
