continuing the type branch

--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -20,7 +20,7 @@ export async function getStaticPaths() {
 }
 ---
 
-<Layout title={post.data.title}>
+<Layout title={post.data.title} accent={post.data.accent}>
   {!post.data.hideTitle && <h1>{post.data.title}</h1>}
   <Content />
 </Layout>
