--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import LayoutSwitcher from "../components/sitelayout/LayoutSwitcher.astro";
 import FloatingEdit from "../components/sitelayout/FloatingEdit.astro";
-const { title } = Astro.props;
+const { title, accent } = Astro.props;
 import { ViewTransitions } from "astro:transitions";
 import { settings } from "../components/helpers/settingsHelper";
 import { getImage } from "astro:assets";
@@ -27,13 +27,13 @@ if (images && images[imagePath]) {
 }
 
 // generate font stacks
-const fontStacks: { [key: string]: string } = {
+const fontStacks: { [key: string]: string | { [key: string]: string } } = {
   "fontStack-default": "sans-serif",
 };
 settings.fonts.fontLibrary.forEach((item, id) => {
   fontStacks[`fontStack-${id}`] = item.mode.value.fontFamily;
 });
-console.log(fontStacks);
+// console.log(fontStacks);
 
 const fontLinks = Object.values(settings.fonts.fontLibrary)
   .map((fontObj) => {
@@ -51,21 +51,37 @@ const fontSpecs = settings.typeOptions;
 const fontSpecSets = Object.entries(fontSpecs);
 fontSpecSets.forEach((pair) => {
   const fontVars = Object.entries(pair[1]);
+  //pair[0] would be 'h1' or 'p' etc
   fontVars.forEach((fontVarPair) => {
-    const keyName = pair[0] + "-" + fontVarPair[0];
+    let keyName = pair[0] + "-" + fontVarPair[0];
     if (fontVarPair[0] === "fontFamily") {
       const fontID = settings.fonts.fontLibrary.findIndex((item) => {
         return fontVarPair[1] === item.uniqueID;
       });
       const normalizedFontID = fontID === -1 ? "default" : fontID;
       fontRules[keyName] = `var(--fontStack-${normalizedFontID})`;
+    } else if (fontVarPair[0] === "textDecorationColorProps") {
+      // console.log(fontVarPair[1]);
+      keyName = pair[0] + "-textDecorationColor";
+      switch (fontVarPair[1].discriminant) {
+        case "default":
+          fontRules[keyName] = "default";
+          break;
+        case "accent":
+          fontRules[keyName] = "var(--pageAccentColor)";
+          break;
+        case "custom":
+          const customColor = fontVarPair[1].value;
+          fontRules[keyName] = customColor;
+      }
+      // console.log("colorProps:");
     } else {
       // @ts-ignore
       fontRules[keyName] = fontVarPair[1];
     }
   });
 });
-console.log(fontRules);
+// console.log(fontRules);
 ---
 
 <!doctype html>
@@ -89,6 +105,7 @@ console.log(fontRules);
         standardPadding: settings.pageArea.padding.horizontal,
         verticalPadding: settings.pageArea.padding.vertical,
         maxImageWidth: settings.pageArea.images.displayWidth,
+        pageAccentColor: accent,
       }}
       is:global
     >
@@ -206,6 +223,11 @@ console.log(fontRules);
         margin-bottom: var(--h2-marginBottom);
         color: var(--font-color-override, --h2-color);
         line-height: var(--h2-lineHeight);
+        text-decoration-line: var(--h2-textDecorationLine);
+        text-decoration-style: var(--h2-textDecorationStyle);
+        text-decoration-thickness: var(--h2-textDecorationThickness);
+        text-decoration-skip-ink: var(--h2-textDecorationSkipInk);
+        text-decoration-color: var(--h2-textDecorationColor);
       }
       h3 {
         font-family: var(--h3-fontFamily);
