continues implementing type

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -212,6 +212,11 @@ fontSpecSets.forEach((pair) => {
         margin-bottom: var(--h1-marginBottom);
         color: var(--font-color-override, --h1-color);
         line-height: var(--h1-lineHeight);
+        text-decoration-line: var(--h1-textDecorationLine);
+        text-decoration-style: var(--h1-textDecorationStyle);
+        text-decoration-thickness: var(--h1-textDecorationThickness);
+        text-decoration-skip-ink: var(--h1-textDecorationSkipInk);
+        text-decoration-color: var(--h1-textDecorationColor);
       }
       h2 {
         font-family: var(--h2-fontFamily);
@@ -239,6 +244,12 @@ fontSpecSets.forEach((pair) => {
         margin-bottom: var(--h3-marginBottom);
         color: var(--font-color-override, --h3-color);
         line-height: var(--h3-lineHeight);
+
+        text-decoration-line: var(--h3-textDecorationLine);
+        text-decoration-style: var(--h3-textDecorationStyle);
+        text-decoration-thickness: var(--h3-textDecorationThickness);
+        text-decoration-skip-ink: var(--h3-textDecorationSkipInk);
+        text-decoration-color: var(--h3-textDecorationColor);
       }
       h4 {
         font-family: var(--h4-fontFamily);
@@ -250,6 +261,12 @@ fontSpecSets.forEach((pair) => {
         margin-bottom: var(--h4-marginBottom);
         color: var(--font-color-override, --h4-color);
         line-height: var(--h4-lineHeight);
+
+        text-decoration-line: var(--h4-textDecorationLine);
+        text-decoration-style: var(--h4-textDecorationStyle);
+        text-decoration-thickness: var(--h4-textDecorationThickness);
+        text-decoration-skip-ink: var(--h4-textDecorationSkipInk);
+        text-decoration-color: var(--h4-textDecorationColor);
       }
       h5 {
         font-family: var(--h5-fontFamily);
@@ -261,6 +278,12 @@ fontSpecSets.forEach((pair) => {
         margin-bottom: var(--h5-marginBottom);
         color: var(--font-color-override, --h5-color);
         line-height: var(--h5-lineHeight);
+
+        text-decoration-line: var(--h5-textDecorationLine);
+        text-decoration-style: var(--h5-textDecorationStyle);
+        text-decoration-thickness: var(--h5-textDecorationThickness);
+        text-decoration-skip-ink: var(--h5-textDecorationSkipInk);
+        text-decoration-color: var(--h5-textDecorationColor);
       }
       h6 {
         font-family: var(--h6-fontFamily);
@@ -272,6 +295,12 @@ fontSpecSets.forEach((pair) => {
         margin-bottom: var(--h6-marginBottom);
         color: var(--font-color-override, --h6-color);
         line-height: var(--h6-lineHeight);
+
+        text-decoration-line: var(--h6-textDecorationLine);
+        text-decoration-style: var(--h6-textDecorationStyle);
+        text-decoration-thickness: var(--h6-textDecorationThickness);
+        text-decoration-skip-ink: var(--h6-textDecorationSkipInk);
+        text-decoration-color: var(--h6-textDecorationColor);
       }
 
       p {
@@ -284,6 +313,12 @@ fontSpecSets.forEach((pair) => {
         margin-bottom: var(--p-marginBottom);
         color: var(--font-color-override, --p-color);
         line-height: var(--p-lineHeight);
+
+        text-decoration-line: var(--p-textDecorationLine);
+        text-decoration-style: var(--p-textDecorationStyle);
+        text-decoration-thickness: var(--p-textDecorationThickness);
+        text-decoration-skip-ink: var(--p-textDecorationSkipInk);
+        text-decoration-color: var(--p-textDecorationColor);
       }
       .unstyled-link {
         text-decoration: none;
