mega-commit: typography stuff

--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -29,6 +29,11 @@ const cssRules = {
     margin-bottom: var(--menuText-marginBottom);
     color: var(--menuText-color);
     line-height: var(--menuText-lineHeight);
+    text-decoration-line: var(--menuText-textDecorationLine);
+    text-decoration-color: var(--menuText-textDecorationColor);
+    text-decoration-style: var(--menuText-textDecorationStyle);
+    text-decoration-skip-ink: var(--menuText-textDecorationSkipInk);
+    text-decoration-thickness: var(--menuText-textDecorationThickness);
   }
   .menu-item {
     font-family: var(--menuMain-fontFamily);
