--- a/src/components/sitelayout/Sidebar/SidebarNav.astro
+++ b/src/components/sitelayout/Sidebar/SidebarNav.astro
@@ -41,7 +41,6 @@ const fontSettings = fontRules(settings.menu.typography);
     padding-top: var(--menuMain-marginTop);
     padding-bottom: var(--menuMain-marginBottom);
     color: var(--menuMain-color);
-    color: var(--menuSub-color);
     line-height: var(--menuMain-lineHeight);
   }
   .submenu-item {
@@ -227,10 +226,10 @@ const fontSettings = fontRules(settings.menu.typography);
       background-color: transparent;
       overflow: visible;
     }
-    .menu-item,
+    /* .menu-item,
     .submenu-item {
       color: var(--menuText-color);
-    }
+    } */
     .menu-item:hover,
     .submenu-item:hover {
       background-color: var(--mainHoverColor);
