implements underline on sidebar nav

--- a/src/components/sitelayout/Sidebar/SidebarNav.astro
+++ b/src/components/sitelayout/Sidebar/SidebarNav.astro
@@ -32,6 +32,11 @@ const fontSettings = fontRules(settings.menu.typography);
     margin-bottom: var(--menuText-marginBottom);
     color: var(--menuText-color);
     line-height: var(--menuText-lineHeight);
+    text-decoration-line: var(--menuText-textDecorationLine);
+    text-decoration-color: var(--menuText-textDecorationColor);
+    text-decoration-style: var(--menuText-textDecorationStyle);
+    text-decoration-skip-ink: var(--menuText-textDecorationSkipInk);
+    text-decoration-thickness: var(--menuText-textDecorationThickness);
   }
   .menu-item {
     font-family: var(--menuMain-fontFamily);
@@ -42,6 +47,12 @@ const fontSettings = fontRules(settings.menu.typography);
     padding-bottom: var(--menuMain-marginBottom);
     color: var(--menuMain-color);
     line-height: var(--menuMain-lineHeight);
+
+    text-decoration-line: var(--menuMain-textDecorationLine);
+    text-decoration-color: var(--menuMain-textDecorationColor);
+    text-decoration-style: var(--menuMain-textDecorationStyle);
+    text-decoration-skip-ink: var(--menuMain-textDecorationSkipInk);
+    text-decoration-thickness: var(--menuMain-textDecorationThickness);
   }
   .submenu-item {
     font-family: var(--menuSub-fontFamily);
@@ -52,6 +63,11 @@ const fontSettings = fontRules(settings.menu.typography);
     padding-bottom: var(--menuSub-marginBottom);
     color: var(--menuSub-color);
     line-height: var(--menuSub-lineHeight);
+    text-decoration-line: var(--menuSub-textDecorationLine);
+    text-decoration-color: var(--menuSub-textDecorationColor);
+    text-decoration-style: var(--menuSub-textDecorationStyle);
+    text-decoration-skip-ink: var(--menuSub-textDecorationSkipInk);
+    text-decoration-thickness: var(--menuSub-textDecorationThickness);
   }
 
   /* skip link */
