--- a/src/components/sitelayout/Sidebar/SidebarNav.astro
+++ b/src/components/sitelayout/Sidebar/SidebarNav.astro
@@ -20,6 +20,7 @@ const fontSettings = fontRules(settings.menu.typography);
     subItemIndent: settings.menu.sizes.subItemIndent,
     blurStyle: settings.menu.appearance.blurBehind ? "blur(100px)" : "none",
     ...fontSettings,
+    ...settings.menu.borders,
   }}
 >
   /* type stuff */
@@ -184,6 +185,9 @@ const fontSettings = fontRules(settings.menu.typography);
     width: 100%;
     height: 100%;
     z-index: 10;
+
+    border-right: none;
+    border-bottom: var(--borderWidth) solid var(--borderColor);
   }
 
   .menu-mobile-hidden {
@@ -233,7 +237,8 @@ const fontSettings = fontRules(settings.menu.typography);
     .menu-main {
       position: static;
       flex-direction: column;
-
+      border-bottom: none;
+      border-right: var(--borderWidth) solid var(--borderColor);
       justify-content: flex-start;
       padding: var(--menuPadding);
     }
