adds custom CSS to pageSection

--- a/src/components/pagebuilder/PageSection.astro
+++ b/src/components/pagebuilder/PageSection.astro
@@ -30,11 +30,16 @@ if (props.sizing.contentWidth.discriminant) {
 }
 ---
 
+<!-- {"sizing":{"boxWidth":"100%","contentWidth":{"discriminant":false}},"spacing":{"boxPaddingTop":"2rem","boxPaddingBottom":"2rem","boxPaddingLeft":"1rem","boxPaddingRight":"1rem","alignContentBox":"center","spaceBefore":"1rem","spaceAfter":"0rem"},"bgType":{"discriminant":"color","value":"#eeeeee"},"css":{"customCSS":"Ym9yZGVyLXRvcDoxcHggc29saWQgbGltZTs="}}
+
+ -->
 <div
   class:list={[
     "page-section-wrapper",
     `section-bg-${props.bgType.discriminant}`,
+    props.css?.customClass,
   ]}
+  style={atob(props.css?.customCSS || "")}
 >
   {
     props.bgType.discriminant === "image" && (
